<resources>
    <string name="app_name">PhotoEditor</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="collage">Collage</string>
    <string name="label_brush">Brush</string>
    <string name="filter">Filter</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="saving">Save</string>
    <string name="sharing">Sharing</string>
    <string name="done">Done</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>
    <string name="opacity">Opacity</string>
    <string name="brush">Brush</string>
    <string name="angle">Angle</string>
    <string name="zero_degree">0°</string>
    <string name="zero">0</string>
    <string name="saturation">Saturation</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="one">1</string>
    <string name="vignette">Vignette</string>>
</resources>