<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".FinalActivity">

    <ImageView
        android:id="@+id/final_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/placeholder_background"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:src="@drawable/photo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/final_image"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp">
            <ImageView
                android:id="@+id/ic_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/placeholder_background"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:src="@drawable/save"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@android:color/white"
                android:layout_below="@id/ic_save"
                android:textSize="14sp"
                tools:text="@string/saving"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp">
            <ImageView
                android:id="@+id/ic_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/placeholder_background"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:src="@drawable/share"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@android:color/white"
                android:layout_below="@id/ic_share"
                android:textSize="14sp"
                tools:text="@string/sharing"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
