<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/thumb_background_color"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/icBrightness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true">
                <TextView
                    android:id="@+id/lblBrightness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgBrightness"
                    android:text="@string/brightness"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:layout_centerHorizontal="true"/>

                <ImageView
                    android:id="@+id/imgBrightness"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/brightness"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="10dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/icBrightness"
                android:layout_centerVertical="true">
                <TextView
                    android:id="@+id/txtBrightness"
                    android:layout_width="150dp"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textColor="@color/white"
                    android:layout_marginTop="8dp"/>

                <SeekBar
                    android:id="@+id/sbBrightness"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:progress="50"
                    android:layout_below="@id/txtBrightness"/>
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/icContrast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true">
                <TextView
                    android:id="@+id/lblContrast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgContrast"
                    android:text="@string/contrast"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:layout_centerHorizontal="true"/>

                <ImageView
                    android:id="@+id/imgContrast"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/contrast"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="10dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/icContrast"
                android:layout_centerVertical="true">
                <TextView
                    android:id="@+id/txtContrast"
                    android:layout_width="150dp"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:text="@string/one"
                    android:textColor="@color/white"
                    android:layout_marginTop="8dp"/>

                <SeekBar
                    android:id="@+id/sbContrast"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:progress="50"
                    android:layout_below="@id/txtContrast"/>
            </RelativeLayout>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <RelativeLayout
                android:id="@+id/icSaturation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true">
                <TextView
                    android:id="@+id/lblSaturation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgSaturation"
                    android:text="@string/saturation"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:layout_centerHorizontal="true"/>

                <ImageView
                    android:id="@+id/imgSaturation"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/saturation"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="10dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/icSaturation"
                android:layout_centerVertical="true">
                <TextView
                    android:id="@+id/txtSaturation"
                    android:layout_width="150dp"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:text="@string/one"
                    android:textColor="@color/white"
                    android:layout_marginTop="8dp"/>

                <SeekBar
                    android:id="@+id/sbSaturation"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:progress="60"
                    android:layout_below="@id/txtSaturation"/>
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <RelativeLayout
                android:id="@+id/icVignette"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true">
                <TextView
                    android:id="@+id/lblVignette"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgVignette"
                    android:text="@string/vignette"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:layout_centerHorizontal="true"/>

                <ImageView
                    android:id="@+id/imgVignette"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/vignette_ic"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="10dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/icVignette"
                android:layout_centerVertical="true">
                <TextView
                    android:id="@+id/txtVignette"
                    android:layout_width="150dp"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textColor="@color/white"
                    android:layout_marginTop="8dp"/>

                <SeekBar
                    android:id="@+id/sbVignette"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:progress="0"
                    android:layout_below="@id/txtVignette"/>
            </RelativeLayout>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>